# rust_nightly_crate_rs_template

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust_daily_nightly_check.yml  rust_release.yml  rust_validation.yml
rust_nightly_crate_rs/: CHANGELOG.md  Cargo.toml  README.md
rust_nightly_crate_rs/src/: hello.rs  lib.rs  main.rs  test.rs
